--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.44.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
